# cnull

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PATCH_CLI.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt
cnull/: __init__.py  bench_v3.py  cli.py  plots.py  test_v3.py
docs/: one_pager.md  verdict.json
examples/posctrl/: run.sh
